--- a/rookie.html
+++ b/rookie.html
@@ -12,14 +12,14 @@
 </header>
   <main>
 <section>
-
+<h2>歴代将棋新人王戦</h2>
   <!-- 表示モード（セレクト） -->
   <div>
     <label>表示：
       <select id="viewMode">
         <option value="">表示するものを選んでください</option>
         <option value="final">決勝三番勝負の結果一覧</option>
-        <option value="memorial">記念対局一覧</option>
+        <option value="memorial">新人王記念対局一覧</option>
         <option value="age">年齢順一覧</option>
       </select>
     </label>
@@ -52,7 +52,7 @@
 </table>
 
 <div class="free">
-  <h3>自由欄</h3>
+  <h3>出典</h3>
   <p>補足情報など自由に書き込む。</p>
       </div>
 
