--- a/akahata.html
+++ b/akahata.html
@@ -14,7 +14,7 @@
 <section>
   <label>
     <select>
-      <option value="三番勝負">歴代三番勝負</option>
+      <option value="三番勝負">歴代決勝三番勝負</option>
       <option value="記念対局">新人王記念対局</option>
     </select>
   </label>
@@ -26,7 +26,7 @@
 
   <label>
     表示件数：
-    <input type="number" min="1" value="20">
+    <input type="number" min="1" value="55">
   </label>
 </section>
 
