--- a/akahata.html
+++ b/akahata.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <title>将棋の殿堂</title>
-    <link rel="stylesheet" href="style.css?v=2025">
+    <link rel="stylesheet" href="style.css?v=20251028-a">
 </head>
 <body>
 <header>
@@ -12,6 +12,7 @@
 </header>
   <main>
 <section>
+    <div>歴代新人王戦の決勝三番勝負と新人王記念対局を一覧表示できます。</div>
   <label>
     <select>
       <option value="三番勝負">歴代決勝三番勝負</option>
@@ -26,7 +27,7 @@
 
   <label>
     表示件数：
-    <input type="number" min="1" value="55">
+    <input type="number" min="1" value="10">
   </label>
 </section>
 
@@ -67,8 +68,8 @@ document.querySelector('.save-table-btn').addEventListener('click', () => {
 </table>
 
 <div class="free">
-  <h3>自由欄</h3>
-  <p>補足情報など自由に書き込む。</p>
+  <h3>出典</h3>
+  <p>日本将棋連盟:<a href="https://www.shogi.or.jp/match/shinjin/">新人王戦</a></p>
       </div>
 
   </main>
